fix: color contrast

--- a/apps/elements/src/theme.scss
+++ b/apps/elements/src/theme.scss
@@ -21,17 +21,18 @@ $mat-light-theme-foreground: (
   slider-off-active: rgba(black, 0.38)
 );
 
-$blue-primary: mat-palette($mat-light-blue, 800, 100, 700);
+$blue-primary: mat-palette($mat-light-blue, 900, 100, 700);
 $blue-accent: mat-palette($mat-light-blue, 900, 100, 700);
 $blue-theme: mat-light-theme($blue-primary, $blue-accent);
 
 // Define an alternate dark theme.
-$dark-primary: mat-palette($mat-light-blue);
-$dark-accent:  mat-palette($mat-light-blue, A200, A100, A400);
+$dark-primary: mat-palette($mat-light-blue, 900, 100, 700);
+$dark-accent:  mat-palette($mat-light-blue, 300, 200, 400);
+
 $dark-theme:   mat-dark-theme((
   color: (
     primary: $dark-primary,
-    accent: $dark-accent
+    accent: $dark-accent,
   )
 ));
 .ngx-mime-dark-theme {
